--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,4 @@ serde_json = "1.0"
 indicatif = "0.17.1"
 linked-hash-map = "0.5.6"
 strip-ansi-escapes = "0.1.1"
+time = { version = "0.3.36", default-features = false, features = ["alloc", "formatting", "parsing", "macros"] }
